examples/good/holes.arvo
check (\x : Type . ? ) : Type -> Type.