examples/bad/parse.arvo
check (Type -> ( x : Type) -> Type (Type Type)).
check (\ x : Type -> Type. x x).
check x.